Saved poster API created
